--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,7 +15,7 @@ pipelines:
                 AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
                 AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
                 AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
-                S3_BUCKET: 'asatera-lambda'
-                LOCAL_PATH: 'build'
+                S3_BUCKET: 'asatera-lambda/lambda'
+                LOCAL_PATH: '$(pwd)'
                 ACL: 'private'
                 
