--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,6 +15,8 @@ pipelines:
                 AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
                 AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
                 AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
+                COMMAND: 'upload-only'
+                ZIP_FILE: 'archive.zip'
                 S3_BUCKET: 'asatera-lambda/lambda'
                 LOCAL_PATH: '$(pwd)'
                 ACL: 'private'
