--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,7 +6,8 @@ pipelines:
       - step:
           name: Deploy to S3
           script:
-            - zip -r archive.zip node_modules/ app.js package.json
+            - mkdir artifact
+            - zip -r artifact/archive.zip node_modules/ app.js package.json
             - pipe: atlassian/aws-s3-deploy:0.5.0
               variables:
                 AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
@@ -15,6 +16,6 @@ pipelines:
                 COMMAND: 'upload-only'
                 ZIP_FILE: 'archive.zip'
                 S3_BUCKET: 'asatera-lambda/lambda'
-                LOCAL_PATH: '$(pwd)/archive.zip'
+                LOCAL_PATH: 'artifact'
                 ACL: 'private'
                 
