--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://bitbucket.org/VueMongo/lambda-api#readme",
   "dependencies": {
     "aws-sdk": "^2.922.0",
+    "bcrypt": "^5.0.1",
     "date-fns": "^2.22.1",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -26,6 +27,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "serverless-middleware": "0.0.14",
     "serverless-offline": "^7.0.0"
   }
 }
