--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
+    "nodemailer": "^6.6.1",
     "serverless": "^2.45.1",
     "uuid": "^8.3.2"
   },
