--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/VueMongo/lambda-api#readme",
   "dependencies": {
+    "amazon-cognito-identity-js": "^5.0.3",
     "aws-sdk": "^2.922.0",
     "bcrypt": "^5.0.1",
     "date-fns": "^2.22.1",
