--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "date-fns": "^2.22.1",
     "dotenv": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.5",
     "mongodb": "^3.6.9",
     "mongoose": "^5.12.13",
     "nodemailer": "^6.6.1",
+    "request": "^2.88.2",
     "serverless": "^2.45.1",
     "uuid": "^8.3.2"
   },
