--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,5 +9,5 @@ pipelines:
           script:
             - apk add python3
             - npm install -g serverless
-            - serverless config credentials --stage dev --provider aws --key ${AWS_ACCESS_KEY_ID} --secret ${AWS_SECRET_ACCESS_KEY}
+            - serverless config credentials --provider aws --key ${AWS_ACCESS_KEY_ID} --secret ${AWS_SECRET_ACCESS_KEY}
             - serverless deploy --stage dev
