--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,8 +7,9 @@ pipelines:
           caches:
             - node
           script:
-            - npm config set prefix /usr/local
-            - npm install -g serverless
-            - npm install serverless-offline -g
-            - serverless config credentials --provider aws --key ${AWS_ACCESS_KEY_ID} --secret ${AWS_SECRET_ACCESS_KEY}
-            - serverless deploy
+            - npm install -g npm
+            - npm install --save-dev
+            - pipe: atlassian/serverless-deploy:1.1.1
+              variables:
+                AWS_ACCESS_KEY_ID: $KEY_DEFINED_ON_BITBUCKET
+                AWS_SECRET_ACCESS_KEY: $KEY_DEFINED_ON_BITBUCKET
