--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,10 +7,6 @@ pipelines:
           caches:
             - node
           script:
-            - npm install -g npm
             - npm install -g serverless
-            - npm install --save-dev
-            - pipe: atlassian/serverless-deploy:1.1.1
-              variables:
-                AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-                AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
+            - serverless config credentials --provider aws --key ${AWS_ACCESS_KEY_ID} --secret ${AWS_SECRET_ACCESS_KEY}
+            - serverless deploy
