--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,5 +8,6 @@ pipelines:
             - node
           script:
             - npm install -g serverless
+            - serverless plugin install -n serverless-offline
             - serverless config credentials --provider aws --key ${AWS_ACCESS_KEY_ID} --secret ${AWS_SECRET_ACCESS_KEY}
             - serverless deploy
