--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "invoke": "sls invoke local -f hello"
+    "invoke": "sls invoke local -f listArticles"
   },
   "repository": {
     "type": "git",
