--- a/serverless.yml
+++ b/serverless.yml
@@ -165,7 +165,7 @@ functions:
     handler: handlers/subscriptions_handler.updateRequestsPerCycle
     timeout: 60
     events:
-      - schedule: cron(0 0 0 * * ? *)
+      - schedule: cron(0 0 * * ? *)
 
 useDotenv: true
 plugins:
