--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 service: aws-lambda-api-service
-variablesResolutionMode: 20210326
+#variablesResolutionMode: 20210326
 # frameworkVersion: '2'
 custom:
   dotenv:
@@ -7,7 +7,7 @@ custom:
 provider:
   name: aws
   runtime: nodejs12.x
-  lambdaHashingVersion: 20201221
+  #lambdaHashingVersion: 20201221
   stage: dev
   region: us-east-1
   environment:
