--- a/serverless.yml
+++ b/serverless.yml
@@ -6,9 +6,9 @@ custom:
     include: []
 provider:
   name: aws
-  runtime: nodejs12.x
+  runtime: nodejs16.x
   #lambdaHashingVersion: 20201221
-  stage: dev
+  stage: ${opt:stage, 'dev'}
   region: us-east-1
   environment:
     MONGODB_ATLAS_CLUSTER_URI: mongodb+srv://Dev-API-User:y9D3u7GwnfPXIKY7@mongodb-dev.ns6ky.mongodb.net/NewsAPI
