--- a/serverless.yml
+++ b/serverless.yml
@@ -1,9 +1,10 @@
 service: aws-lambda-api-service
 #variablesResolutionMode: 20210326
-# frameworkVersion: '2'
+frameworkVersion: '3'
 custom:
   dotenv:
     include: []
+
 provider:
   name: aws
   runtime: nodejs16.x
