--- a/serverless.yml
+++ b/serverless.yml
@@ -7,12 +7,12 @@ custom:
 
 provider:
   name: aws
-  runtime: nodejs16.x
+  runtime: nodejs14.x
   #lambdaHashingVersion: 20201221
   stage: ${opt:stage, 'dev'}
   region: us-east-1
-  environment:
-    MONGODB_ATLAS_CLUSTER_URI: mongodb+srv://Dev-API-User:y9D3u7GwnfPXIKY7@mongodb-dev.ns6ky.mongodb.net/NewsAPI
+  environment: 
+    MONGODB_ATLAS_CLUSTER_URI: ${env:MONGODB_ATLAS_CLUSTER_URI}
 
 functions:
   listArticles:
