--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lambda-api",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "handler.js",
   "scripts": {
@@ -16,6 +17,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/VueMongo/lambda-api#readme",
   "dependencies": {
+    "@aws-sdk/credential-provider-node": "^3.238.0",
     "amazon-cognito-identity-js": "^5.2.12",
     "aws-cli": "^0.0.2",
     "aws-sdk": "^2.922.0",
