--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,7 @@
     "jest": "^29.3.1"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.55.1",
+    "aws-cdk-lib": "^2.55.1",
     "constructs": "^10.0.0"
   }
 }
