--- a/old-api/serverless.yml
+++ b/old-api/serverless.yml
@@ -18,9 +18,9 @@ provider:
       - subnet-0f39abb3b3e5d8e7e
       
   environment: 
-    MONGODB_ATLAS_CLUSTER_URI: ${env:MONGODB_ATLAS_CLUSTER_URI}
-    UserPoolId: ${env:COGNITO_USER_POOL}
-    ClientId: ${env:COGNITO_USER_CLIENT}
+    MONGODB_ATLAS_CLUSTER_URI: ${MONGODB_ATLAS_CLUSTER_URI}
+    UserPoolId: ${COGNITO_USER_POOL}
+    ClientId: ${COGNITO_USER_CLIENT}
     
 
 functions:
