--- a/old-api/serverless.yml
+++ b/old-api/serverless.yml
@@ -8,6 +8,10 @@ frameworkVersion: '3'
   #dotenv:
     #include: []
 
+package:
+  exclude:
+    - "aws-lambda-api-service.zip"
+
 provider:
   name: aws
   runtime: nodejs14.x
@@ -33,7 +37,7 @@ provider:
 functions:
   listArticles:
     handler: handlers/articles_handler.list
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: articles
@@ -41,7 +45,7 @@ functions:
           cors: true
   showArticle:
     handler: handlers/articles_handler.show
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: articles/{id}
@@ -49,7 +53,7 @@ functions:
           cors: true
   listSources:
     handler: handlers/sources_handler.list
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: sources
@@ -57,7 +61,7 @@ functions:
           cors: true
   showSource:
     handler: handlers/sources_handler.show
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: sources/{id}
@@ -66,7 +70,7 @@ functions:
 
   updateSource:
     handler: handlers/sources_handler.update
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: sources/{id}
@@ -74,7 +78,7 @@ functions:
           cors: true
   createSource:
     handler: handlers/sources_handler.create
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: sources
@@ -83,7 +87,7 @@ functions:
 
   removeSource:
     handler: handlers/sources_handler.remove
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: sources/{id}
@@ -91,7 +95,7 @@ functions:
           cors: true
   listSubscriptions:
     handler: handlers/subscriptions_handler.list
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: subscriptions
@@ -99,7 +103,7 @@ functions:
           cors: true
   createUser:
     handler: handlers/users_handler.create
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users
@@ -107,7 +111,7 @@ functions:
           cors: true
   changePassword:
     handler: handlers/users_handler.recover_password
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/recover
@@ -115,7 +119,7 @@ functions:
           cors: true
   userMe:
     handler: handlers/users_handler.me
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/me
@@ -123,7 +127,7 @@ functions:
           cors: true
   getApiKey:
     handler: handlers/users_handler.get_api_key
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/key
@@ -131,7 +135,7 @@ functions:
           cors: true
   getUsage:
     handler: handlers/users_handler.get_usage
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/usage
@@ -139,7 +143,7 @@ functions:
           cors: true
   removeUsers:
     handler: handlers/users_handler.remove
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/{id}
@@ -147,7 +151,7 @@ functions:
           cors: true
   updateUser:
     handler: handlers/users_handler.update
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/{id}
@@ -155,7 +159,7 @@ functions:
           cors: true
   updateUserPassword:
     handler: handlers/users_handler.change_password
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/password
@@ -163,7 +167,7 @@ functions:
           cors: true
   userRegister:
     handler: handlers/users_handler.register
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/signin
@@ -171,12 +175,13 @@ functions:
           cors: true
   userLogin:
     handler: handlers/users_handler.login
-    timeout: 60
+    timeout: 30
     events:
       - http:
           path: users/login
           method: post
           cors: true
+          
   cognito_post_confirmation:
     handler: handlers/users_handler.post_confirmation
     timeout: 30
