--- a/old-api/package.json
+++ b/old-api/package.json
@@ -39,6 +39,7 @@
   "devDependencies": {
     "serverless": "^3.26.0",
     "serverless-middleware": "3.1.0",
-    "serverless-offline": "^12.0.3"
+    "serverless-offline": "^12.0.3",
+    "serverless-domain-manager": "^7.0.2"
   }
 }
