--- a/old-api/package.json
+++ b/old-api/package.json
@@ -20,6 +20,7 @@
     "amazon-cognito-identity-js": "^6.1.2",
     "aws-cli": "^0.0.2",
     "aws-sdk": "^2.1290.0",
+    "axios": "^1.3.5",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.29.3",
