--- a/old-api/env.yml
+++ b/old-api/env.yml
@@ -5,3 +5,4 @@ dev:
   COGNITO_REGION: "us-east-1"
   COGNITO_USER_POOL_NAME: "cannabis_news_api_users_client"
   LAMBDA_FUNCTION_NAME: "MongoDB_Atlas_Connection"
+  SPECIAL_UPDATE_API_KEY: "f5b3b77ade314184acb5da4c0c93eae4"
